--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -1,73 +1,95 @@
 <!-- use bootstrap form -->
 <!-- apply ng model directive on each of these input fields
 thus, can create a form control object -->
-<form>
-  <div class="form-group">
-    <!-- for improving the accessibility, use both "title" when user click the label
-      the input field field will immediately get focus -->
-    <label for="title">Title</label>
-    <input ngModel name="title" id="title" type="text" class="form-control">
-  </div>
 
-  <div class="form-group">
-      <label for="price">Price</label>
-      <!-- div.input-group>span.input-group-text //then press enter -->
-      <div class="input-group mb-3">
-          <div class="input-group-prepend">
-            <span class="input-group-text">$</span>
-          </div>
-          <input ngModel name="price" type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
-      </div>
-  </div>
-  <div class="form-group">
-      <label for="category">Category</label>
-      <select ngModel name="category" id="category"  class="form-control">
-        <option value=""></option>
-        <!-- the $key is bread, but not Bread, in database under categories -->
-        <option *ngFor="let c of categories$ | async" [value]="c.$key">
-            {{ c.name }}
-        </option>
-      </select>
-  </div>
-  <div class="form-group">
-      <label for="unit">Unit</label>
-      <select ngModel name="unit" id="unit"  class="form-control">
-        <option value=""></option>
-        <!-- the $key is bread, but not Bread, in database under categories -->
-        <option *ngFor="let c of units$ | async" [value]="c.$key">
-            {{ c.name }}
-        </option>
-      </select>
-  </div>
-  <div class="form-group">
-      <label for="condition">Condition</label>
-      <select ngModel name="condition" id="condition"  class="form-control">
-          <option value="">good</option>
-          <option value="">bad</option>
-      </select>
-  </div>
-  <div class="form-group">
-      <label for="isonsale">Is Onsale</label>
-      <select ngModel name="isOnsale" id="isOnsale"  class="form-control">
-          <option value="">yes</option>
-          <option value="">no</option>
-      </select>
-  </div>
-  <div class="form-group">
-      <label for="discount">Discount</label>
-      <select ngModel name="discount" id="discount"  class="form-control">
-          <option value="">0.9</option>
-          <option value="">0.7</option>
-          <option value="">0.5</option>
-      </select>
-  </div>
-  <div class="form-group">
-      <label for="description">Description</label>
-      <input ngModel name="description" id="description" type="text" class="form-control">
-  </div>
-  <div class="form-group">
-      <label for="imageUrl">Image Url</label>
-      <input ngModel name="imageUrl" id="imageUrl" type="text" class="form-control">
-  </div>
-  <button class="btn btn-primary">Save</button>
-</form>
+<div class="row">
+    <!-- bootstrap divide the screen to 12 columns, 6 means half of the screen -->
+    <div class="col-md-6">
+        <form #f="ngForm" (ngSubmit)="save(f.value)">
+                <div class="form-group">
+                    <!-- for improving the accessibility, use both "title" when user click the label
+                    the input field field will immediately get focus -->
+                    <label for="title">Title</label>
+                    <input #title="ngModel" ngModel name="title" id="title" type="text" class="form-control">
+                </div>
+                
+                <div class="form-group">
+                    <label for="price">Price</label>
+                    <!-- div.input-group>span.input-group-text //then press enter -->
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">$</span>
+                        </div>
+                        <input #price="ngModel" ngModel name="price" type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="category">Category</label>
+                    <select #category="ngModel" ngModel name="category" id="category"  class="form-control">
+                        <option value=""></option>
+                        <!-- the $key is bread, but not Bread, in database under categories -->
+                        <option *ngFor="let c of categories$ | async" [value]="c.$key">
+                            {{ c.name }}
+                        </option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="unit">Unit</label>
+                    <select #unit="ngModel" ngModel name="unit" id="unit"  class="form-control">
+                        <option value="ea"></option>
+                        <!-- the $key is bread, but not Bread, in database under categories -->
+                        <option *ngFor="let c of units$ | async" [value]="c.$key">
+                            {{ c.name }}
+                        </option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="condition">Condition</label>
+                    <select #condition="ngModel" ngModel name="condition" id="condition"  class="form-control">
+                        <option value="good">good</option>
+                        <option value="bad">bad</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="isonsale">Is Onsale</label>
+                    <select #isOnsale="ngModel" ngModel name="isOnsale" id="isOnsale"  class="form-control">
+                        <option value="yes">yes</option>
+                        <option value="no">no</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="discount">Discount</label>
+                    <select #discount="ngModel" ngModel name="discount" id="discount"  class="form-control">
+                        <option value="0.9">0.9</option>
+                        <option value="0.7">0.7</option>
+                        <option value="0.5">0.5</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="description">Description</label>
+                    <input #description="ngModel" ngModel name="description" id="description" type="text" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="imageUrl">Image Url</label>
+                    <input #imageUrl="ngModel" ngModel name="imageUrl" id="imageUrl" type="text" class="form-control">
+                    <label for="imageUrl">"No Image" link: https://upload.wikimedia.org/wikipedia/commons/6/62/%22No_Image%22_placeholder.png</label>
+                </div>
+                <button class="btn btn-primary">Save</button>
+                </form>                  
+    </div>
+    <div class="col-md-6">
+        <div class="card" style="width: 18rem;">
+                <img class="card-img-top" [src]="imageUrl.value">
+                <div class="card-body">
+                    <h5 class="card-title">Title: {{title.value}}</h5>
+                    <p class="card-text">Price: {{price.value | currency:'USD':true}}</p>
+                    <p class="card-text">Unit: {{unit.value}}</p>
+                    <p class="card-text">Category: {{category.value}}</p>
+                    <p class="card-text">Condition: {{condition.value}}</p>
+                    <p class="card-text">Is Onsale: {{isOnsale.value}}</p>
+                    <p class="card-text">Discount: {{discount.value}}</p>
+                    <p class="card-text">Description: {{description.value}}</p>
+                </div>
+        </div>
+    </div>
+</div>
