--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -1,2 +1,28 @@
+<p>
+  <a routerLink="/admin/products/new" class="btn btn-primary">New Product</a>
+</p>
 
-<a routerLink="/admin/products/new" class="btn primary">New Product</a>
+<table class="table">
+    <thead>
+        <tr>
+            <th>Title</th>
+            <th>Price</th>
+            <th>Unit</th>
+            <th>Is Onsale</th>
+            <th>Category</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let p of products$ | async">
+            <td>{{ p.title }}</td>
+            <td>{{ p.price }}</td>
+            <td>{{ p.unit }}</td>
+            <td>{{ p.isOnsale }}</td>
+            <td>{{ p.category }}</td>
+            <td><a [routerLink]="['/admin/products/', p.$key]">Edit</a></td>
+        </tr>
+    </tbody>
+</table>
+
+
