--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -10,7 +10,7 @@ thus, can create a form control object -->
                     <!-- for improving the accessibility, use both "title" when user click the label
                     the input field field will immediately get focus -->
                     <label for="title">Title</label>
-                    <input #title="ngModel" ngModel name="title" id="title" type="text" class="form-control">
+                    <input #title="ngModel" [(ngModel)]="product.title" name="title" id="title" type="text" class="form-control">
                 </div>
                 
                 <div class="form-group">
@@ -20,12 +20,12 @@ thus, can create a form control object -->
                         <div class="input-group-prepend">
                             <span class="input-group-text">$</span>
                         </div>
-                        <input #price="ngModel" ngModel name="price" type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+                        <input #price="ngModel" [(ngModel)]="product.price" name="price" type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="category">Category</label>
-                    <select #category="ngModel" ngModel name="category" id="category"  class="form-control">
+                    <select #category="ngModel" [(ngModel)]="product.category" name="category" id="category"  class="form-control">
                         <option value=""></option>
                         <!-- the $key is bread, but not Bread, in database under categories -->
                         <option *ngFor="let c of categories$ | async" [value]="c.$key">
@@ -35,7 +35,7 @@ thus, can create a form control object -->
                 </div>
                 <div class="form-group">
                     <label for="unit">Unit</label>
-                    <select #unit="ngModel" ngModel name="unit" id="unit"  class="form-control">
+                    <select #unit="ngModel" [(ngModel)]="product.unit" name="unit" id="unit"  class="form-control">
                         <option value="ea"></option>
                         <!-- the $key is bread, but not Bread, in database under categories -->
                         <option *ngFor="let c of units$ | async" [value]="c.$key">
@@ -45,21 +45,21 @@ thus, can create a form control object -->
                 </div>
                 <div class="form-group">
                     <label for="condition">Condition</label>
-                    <select #condition="ngModel" ngModel name="condition" id="condition"  class="form-control">
+                    <select #condition="ngModel" [(ngModel)]="product.condition" name="condition" id="condition"  class="form-control">
                         <option value="good">good</option>
                         <option value="bad">bad</option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label for="isonsale">Is Onsale</label>
-                    <select #isOnsale="ngModel" ngModel name="isOnsale" id="isOnsale"  class="form-control">
+                    <select #isOnsale="ngModel" [(ngModel)]="product.isOnsale" name="isOnsale" id="isOnsale"  class="form-control">
                         <option value="yes">yes</option>
                         <option value="no">no</option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label for="discount">Discount</label>
-                    <select #discount="ngModel" ngModel name="discount" id="discount"  class="form-control">
+                    <select #discount="ngModel" [(ngModel)]="product.discount" name="discount" id="discount"  class="form-control">
                         <option value="0.9">0.9</option>
                         <option value="0.7">0.7</option>
                         <option value="0.5">0.5</option>
@@ -67,28 +67,30 @@ thus, can create a form control object -->
                 </div>
                 <div class="form-group">
                     <label for="description">Description</label>
-                    <input #description="ngModel" ngModel name="description" id="description" type="text" class="form-control">
+                    <input #description="ngModel" [(ngModel)]="product.description" name="description" id="description" type="text" class="form-control">
                 </div>
                 <div class="form-group">
                     <label for="imageUrl">Image Url</label>
-                    <input #imageUrl="ngModel" ngModel name="imageUrl" id="imageUrl" type="text" class="form-control">
+                    <input #imageUrl="ngModel" [(ngModel)]="product.imageUrl" name="imageUrl" id="imageUrl" type="text" class="form-control">
                     <label for="imageUrl">"No Image" link: https://upload.wikimedia.org/wikipedia/commons/6/62/%22No_Image%22_placeholder.png</label>
                 </div>
                 <button class="btn btn-primary">Save</button>
+                <!-- the below below type is submit!!!!!! -->
+                <button type="button" (click)="delete()" class="btn btn-danger">Delete</button>
                 </form>                  
     </div>
     <div class="col-md-6">
         <div class="card" style="width: 18rem;">
-                <img class="card-img-top" [src]="imageUrl.value">
+                <img class="card-img-top" [src]="product.imageUrl" *ngIf="product.imageUrl">
                 <div class="card-body">
-                    <h5 class="card-title">Title: {{title.value}}</h5>
-                    <p class="card-text">Price: {{price.value | currency:'USD':true}}</p>
-                    <p class="card-text">Unit: {{unit.value}}</p>
-                    <p class="card-text">Category: {{category.value}}</p>
-                    <p class="card-text">Condition: {{condition.value}}</p>
-                    <p class="card-text">Is Onsale: {{isOnsale.value}}</p>
-                    <p class="card-text">Discount: {{discount.value}}</p>
-                    <p class="card-text">Description: {{description.value}}</p>
+                    <h5 class="card-title">Title: {{product.title}}</h5>
+                    <p class="card-text">Price: {{product.price | currency:'USD':true}}</p>
+                    <p class="card-text">Unit: {{product.unit}}</p>
+                    <p class="card-text">Category: {{product.category}}</p>
+                    <p class="card-text">Condition: {{product.condition}}</p>
+                    <p class="card-text">Is Onsale: {{product.isOnsale}}</p>
+                    <p class="card-text">Discount: {{product.discount}}</p>
+                    <p class="card-text">Description: {{product.description}}</p>
                 </div>
         </div>
     </div>
