--- a/src/app/admin/admin-orders/admin-orders.component.html
+++ b/src/app/admin/admin-orders/admin-orders.component.html
@@ -1,3 +1,57 @@
-<p>
-  admin-orders works!
-</p>
+<!-- 
+<div class="table-header">
+    <mat-form-field>
+        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+    </mat-form-field>
+</div>
+
+<div class="table-container mat-elevation-z8">
+    <mat-table [dataSource]="dataSource" matSort>
+
+        
+        <ng-container matColumnDef="customer">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Customer </mat-header-cell>
+            <mat-cell *matCellDef="let order"> {{order.shipping.name}} </mat-cell>
+        </ng-container>
+
+        
+        <ng-container matColumnDef="date">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Date </mat-header-cell>
+            <mat-cell *matCellDef="let order"> {{order.datePlaced | date}} </mat-cell>
+        </ng-container>
+
+        
+        <ng-container matColumnDef="view" >
+            <mat-header-cell *matHeaderCellDef></mat-header-cell>
+            <mat-cell *matCellDef="let product"><a [routerLink]="['/admin/orders/', order.$key]">View</a></mat-cell>
+        </ng-container>
+
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;">
+        </mat-row>
+    </mat-table>
+
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 50, 100]"></mat-paginator>
+</div> -->
+
+
+
+<h1>Orders</h1>
+<table class="table">
+  <thead>
+    <tr>
+      <th>Customer</th>
+      <th>Date</th>
+      <th></th>
+    </tr>
+  </thead> 
+  <tbody>
+    <tr *ngFor="let order of orders$ | async">
+      <td>{{ order.shipping.name }}</td>
+      <td>{{ order.datePlaced | date}}</td>
+      <td>
+        <a [routerLink]="['/admin/orders/', order.$key]">View</a>
+      </td>
+    </tr>
+  </tbody> 
+</table>
