--- a/src/app/order-details/order-details.component.html
+++ b/src/app/order-details/order-details.component.html
@@ -1,6 +1,6 @@
-<!--  -->
-<h1>Order details</h1>
-
+<h1>
+  Order Details
+</h1>
 <div class="row">
   <div class="col-6">
       <div class="card">
@@ -23,7 +23,7 @@
                 State: {{order.shipping.state}}
               </li>
               <li class="list-group-item">
-                ZIP code: {{order.shipping.zipCode}}
+                ZIP code: {{order.shipping.zipcode}}
               </li>
             </ul>
           </div>
