--- a/src/app/payments/make-payment/make-payment.component.html
+++ b/src/app/payments/make-payment/make-payment.component.html
@@ -1,4 +1,4 @@
-<h1>Review Order</h1>
+<!-- <h1>Review Order</h1>
 <div class="row col-9" *ngIf="cart$ | async as cart">
   <p>
     You have {{ cart.totalItemsCount }} items in your shopping cart.
@@ -44,4 +44,4 @@
   Ready to Pay
 </button>
 </div>
-
+ -->
