--- a/src/app/shopping/components/shipping-form/shipping-form.component.html
+++ b/src/app/shopping/components/shipping-form/shipping-form.component.html
@@ -24,9 +24,28 @@
       <div *ngIf="city.errors.required">City is required.</div>
     </div>
   </div>
+  <div class="form-group">
+    <label for="">State</label>
+    <input #state="ngModel" name="state" [(ngModel)]="shipping.state" type="text" class="form-control" required>
+    <div class="alert alert-danger" *ngIf="state.touched && state.invalid">
+      <div *ngIf="state.errors.required">State is required.</div>
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="">Zip Code</label>
+    <input #zipcode="ngModel" name="zipcode" [(ngModel)]="shipping.zipcode" type="text" class="form-control" required>
+    <div class="alert alert-danger" *ngIf="zipcode.touched && zipcode.invalid">
+      <div *ngIf="zipcode.errors.required">Zipcode is required.</div>
+    </div>
+  </div>
 
   <button
     [disabled]="!f.valid"
-    routerLink='/payment'
+    (click)="handlePayment()"
     class="btn btn-primary">Place Order</button>
+
+  <!-- <button
+  [disabled]="!f.valid"
+  (click)="saveShipping()"
+  class="btn btn-primary">Save Shipping</button> -->
 </form>
