--- a/src/app/profile-update/profile-update.component.html
+++ b/src/app/profile-update/profile-update.component.html
@@ -18,7 +18,7 @@
 
     <div class="form-group">
         <label for="profile_picture">Profile Picture URL</label>
-        <input [ngModel]="appUser.profile_picture" name="profile_picture" id="profile_picture" type="text" class="form-control" value="{{appUser.profile_picture}}">
+        <input [ngModel]="appUser.profile_picture" name="profile_picture" id="profile_picture" type="text" class="form-control">
     </div>
     <button class="btn btn-primary">Update</button>
     <button class="btn btn-danger" routerLink="/profile">Cancel</button>
