--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,7 @@
 /* make the text not be covered by the top bar */
 body { padding-top : 70px;}
 
-$primary-color: #32CD32;
+$primary-color: #58C777;
 $secondary-color: #FA8072;
 
 .list-group-item.active {
