--- a/src/app/shared/components/product-card/product-card.component.css
+++ b/src/app/shared/components/product-card/product-card.component.css
@@ -1,3 +1,4 @@
+
 .card-footer
 {
     padding: 0;
@@ -10,19 +11,63 @@
 
 .card-img-top
 {
-    height: 40%;
+    height: 200px;
+    width: 220px;
 }
 
 .checked {
     color: orange;
 }
 
-.sale-tag
+/* .sale-tag
 {
     background: #FA8072;
     font-size: 24px;
     font-weight: bold;
     text-align: center;
     color: white;
-    margin-top: 20px;
+} */
+
+.badge {
+    height: 40px;
+    /* background: #58C777; */
+    background:red;
+    width: 100px;
+    text-align: center;
+    font-size: 20px;
+    line-height: 35px;
+    font-family: sans-serif;
+    color: #FFF;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(45deg);
+    position: relative;
+    top: -10px;
+    left: 180px;
+}
+
+/* These two are making the sale tag to look like a ribbon */
+.badge .left {
+    position: absolute;
+    content: '';
+    display: block;
+    top: 40px;
+    left: 6px;
+    height: 8px;
+    width: 8px;
+    background: linear-gradient(135deg, rgba(255, 0, 0, 1) 50%,rgba(255, 0, 0, 0) 50.1%);
+    /* background:red; */
+
+}
+.badge .right {
+    position: absolute;
+    content: '';
+    display: block;
+    top: 40px;
+    left: 83px;
+    height: 8px;
+    width: 8px;
+    background: linear-gradient(135deg, rgba(255, 0, 0, 1) 50%,rgba(255, 0, 0, 0) 50.1%);
+    /* background:red; */
+    -webkit-transform: rotate(90deg);
+    transform: rotate(90deg);
 }
