--- a/src/app/shared/components/product-card/product-card.component.html
+++ b/src/app/shared/components/product-card/product-card.component.html
@@ -1,11 +1,18 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <!-- The class name is to make every product card have same height -->
-<div *ngIf="product.title" class="card h-100 d-flex flex-column justify-content-between" style="width: 15rem">
+<div *ngIf="product.title" class="card h-100 d-flex flex-column justify-content-between" style="width: 15rem;">
 
-  <span *ngIf="product.salePrice" class="sale-tag">
+  <!-- <span *ngIf="product.salePrice" class="sale-tag">
     SALE
-  </span>
+  </span> -->
+	<div *ngIf="product.salePrice" class="badge">
+    <i class="left"></i>
+    <i class="right"></i>
+    SALE
+  </div>
+
+  <!-- <div class="corner-ribbon top-left sticky red shadow">Hello</div> -->
   <img *ngIf="product.imageUrl" class="card-img-top" [src]="product.imageUrl" alt="{{ product.title }}">
   <div class="card-body">
     <h5 class="card-title">{{ product.title }} 
@@ -75,7 +82,7 @@
   </div>
   
   <!-- The footer of the card -->
-  <div  *ngIf="showActions && shoppingCart" class="card-footer">
+  <div *ngIf="showActions && shoppingCart" class="card-footer">
     <!-- Only show add to cart when quantity is 0 -->
     <button
     *ngIf="shoppingCart.getQuantity(product) === 0; else updateQuantity"
