--- a/src/app/shopping/components/order-success/order-success.component.css
+++ b/src/app/shopping/components/order-success/order-success.component.css
@@ -1,7 +1,6 @@
 div
 {
     padding: 8px;
-    background-color: #32CD32;
 }
 
 .thankYou-msg
@@ -11,15 +10,14 @@ div
 
 h3, h4
 {
-    background-color: #32CD32;
     text-align: center;
     text-transform: uppercase;
-    color: white;
+    color: #58C777;
 }
 
 td, th
 {
-    color: white;
+    color: #58C777;
     font-size: 20px;
     text-align: center;
 }
