--- a/src/app/shared/components/product-quantity/product-quantity.component.html
+++ b/src/app/shared/components/product-quantity/product-quantity.component.html
@@ -3,7 +3,7 @@
   <div class="col-2">
     <button 
       (click)="removeFromCart()"
-      class="btn btn-secondary btnblock">-</button>
+      class="btn btn-outline-info btn-block">-</button>
   </div>
 
   <div class="col text-center">
@@ -13,7 +13,7 @@
   <div class="col-2">
     <button 
       (click)="addToCart(product)"
-      class="btn btn-secondary btnblock">+</button>
+      class="btn btn-outline-info btn-block">+</button>
   </div>
 
 </div>
