--- a/src/app/shopping/components/order-success/order-success.component.css
+++ b/src/app/shopping/components/order-success/order-success.component.css
@@ -1,4 +1,4 @@
-div
+/* div
 {
     padding: 8px;
 }
@@ -20,4 +20,4 @@ td, th
     color: #58C777;
     font-size: 20px;
     text-align: center;
-}
+} */
