--- a/src/app/shopping/components/order-success/order-success.component.html
+++ b/src/app/shopping/components/order-success/order-success.component.html
@@ -1,11 +1,11 @@
-<div class="thankYou-msg">
+<!-- <div class="thankYou-msg">
   <h3 class="title">
     Thank You for Shopping With E-Quality!
-  </h3>
+  </h3> -->
 
   <!-- Only shows the last element of array of "my orders" -->
   <!-- because that should be the most recent purchase -->
-  <div class="order-info" *ngFor="let order of orders$ | async; let last = last">
+  <!-- <div class="order-info" *ngFor="let order of orders$ | async; let last = last">
     <h4 *ngIf="last" style="text-transform: lowercase;">Below is your order information</h4>
         <table class="table" *ngIf="last">
           <thead>
@@ -25,4 +25,59 @@
         </table> 
         <h3 *ngIf="last" class="title">Have a Wonderful Day!</h3>
   </div>
-</div>
+</div> -->
+
+<h1>
+    Order Details
+  </h1>
+  <div class="row">
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Shipping information</h5>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                  Name: {{order.shipping.name}}
+                </li>
+                <li class="list-group-item">
+                  Address Line 1: {{order.shipping.addressLine1}}
+                </li>
+                <li class="list-group-item">
+                  Address line 2: {{order.shipping.addressLine2}}
+                </li>
+                <li class="list-group-item">
+                  City: {{order.shipping.city}}
+                </li>
+                <li class="list-group-item">
+                  State: {{order.shipping.state}}
+                </li>
+                <li class="list-group-item">
+                  ZIP code: {{order.shipping.zipcode}}
+                </li>
+              </ul>
+            </div>
+          </div>
+    </div>
+    <div class="col-6">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Order Number: {{ order.$key }}</h5>
+            <h6 class="card-title">Purchased Date: {{ order.datePlaced | date}}</h6>
+            <ul class="list-group list-group-flush">
+              <li *ngFor="let item of order.items" class="list-group-item">
+                {{ item.quantity }} x {{ item.product.title }}
+                <div class="float-right">
+                  {{ item.totalPrice | currency: 'USD': true }}
+                </div>
+              </li>
+              <li class="list-group-item font-weight-bold">
+                Total
+                <div class="float-right">
+                  {{ order.totalAmount | currency: 'USD': true }}
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div> 
+    </div>
+  </div>
