--- a/src/app/shopping/components/products/product-filter/product-filter.component.html
+++ b/src/app/shopping/components/products/product-filter/product-filter.component.html
@@ -10,7 +10,8 @@
       routerLink="/"
       [queryParams]="{category: c.$key}"
       class="list-group-item list-group-item-action"
-      [class.active]="category === c.$key">
+      [class.active]="category === c.$key"
+      >
       {{ c.name }}
     </a>
   </div>
