adding slides and detailing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
   <bs-navbar></bs-navbar>
 
   <main role="main" class="container">
+    <app-slides></app-slides>
     <router-outlet></router-outlet>
-
 
   </main><!-- /.container -->
