--- a/src/app/order-details/order-details.component.html
+++ b/src/app/order-details/order-details.component.html
@@ -44,7 +44,7 @@
             <li class="list-group-item font-weight-bold">
               Total
               <div class="float-right">
-                {{ order.totalAmount | currency: 'USD': true }}
+                {{ order.purchasePrice | currency: 'USD': true }}
               </div>
             </li>
           </ul>
