--- a/src/app/shopping/components/products/products.component.html
+++ b/src/app/shopping/components/products/products.component.html
@@ -1,5 +1,5 @@
 <!-- search box first vesion, only works with angular-4-data-table-->
-<p>    
+<p class="pt-4">    
   <input
   #query 
   (keyup) = "titleFilter(query.value)"
