--- a/src/app/admin/components/admin-orders/admin-orders.component.html
+++ b/src/app/admin/components/admin-orders/admin-orders.component.html
@@ -1,17 +1,21 @@
-<h1>Orders</h1>
+<h1>All Orders in the System</h1>
 <table class="table">
-  <thead>
-    <tr>
-      <th>Customer</th>
-      <th>Date</th>
-      <th></th>
-    </tr>
-  </thead> 
-  <tbody>
-    <tr *ngFor="let order of orders$ | async">
-      <td>{{ order.shipping.name }}</td>
-      <td>{{ order.datePlaced | date}}</td>
-      <td>
+    <thead>
+      <tr>
+        <th>Customer</th>
+        <th>Price</th>
+        <th>Date</th>
+        <th>Order Number</th>
+        <th></th>
+      </tr>
+    </thead> 
+    <tbody>
+      <tr *ngFor="let order of orders$ | async">
+        <td>{{ order.shipping.name }}</td>
+        <td>{{ order.purchasePrice | currency:'USD': true }}</td>
+        <td>{{ order.datePlaced | date}}</td>
+        <td>{{ order.$key}}</td>
+        <td>
         <a [routerLink]="['/admin/orders/', order.$key]">View</a>
       </td>
     </tr>
