--- a/src/app/shopping/components/check-out/check-out.component.html
+++ b/src/app/shopping/components/check-out/check-out.component.html
@@ -1,5 +1,5 @@
 
-<h2>Shipping</h2>
+<h2>Shipping information</h2>
 <div class="row" *ngIf="cart$ | async as cart">
   <div class="col-6">
     <shipping-form [cart]="cart"></shipping-form>
