--- a/src/app/shopping/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping/components/shopping-cart/shopping-cart.component.html
@@ -39,7 +39,7 @@
       <tr>
         <th></th>
         <th></th>
-        <th></th>
+        <th class="text-right">Total price: </th>
         <th class="text-right">${{ cart.totalPrice}}</th>
       </tr>
     </tfoot>
