--- a/src/app/shopping/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping/components/shopping-cart/shopping-cart.component.html
@@ -40,7 +40,7 @@
         <th></th>
         <th></th>
         <th class="text-right">Total price: </th>
-        <th class="text-right">${{ cart.totalPrice}}</th>
+        <th class="text-right">{{ cart.totalPrice | currency:'USD': true }}</th>
       </tr>
     </tfoot>
   </table>
