--- a/src/app/bs-navbar/bs-navbar.component.css
+++ b/src/app/bs-navbar/bs-navbar.component.css
@@ -1,4 +1,3 @@
-
 .dropdown-toggle, .dropdown-item { 
   cursor: pointer;
 }
@@ -8,4 +7,16 @@ img:active, img:focus {
   outline: 0;
   border: none;
   outline-style: none
+}
+
+.profile-picture
+{
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+}
+
+.profile-picture:hover
+{
+  border: solid 3px grey;
 }
