--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -1,3 +1,4 @@
+<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
   <div class="container">
     <img style="cursor: pointer" class="navbar-brand" routerLink="/" src="../assets/icons/teamlogo.png" height="42" width="42" class="navbar-brand" routerLink="/">
@@ -8,19 +9,74 @@
 
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav mr-auto">
+        
+
         <ng-template #anonymousUser>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/shopping-cart">
+                  <!-- For some reason, the first word should be changed -->
+                  <!-- from "fas" to "fa" -->
+                  <i class="fas fa-tags"></i>
+                   Deals
+                </a>
+              </li>
+
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/shopping-cart">
+                  <!-- For some reason, the first word should be changed -->
+                  <!-- from "fas" to "fa" -->
+                  <i class="fa fa-shopping-cart"></i>
+                </a>
+              </li>
+
           <li class="nav-item">
-            <a class="nav-link" routerLink="/login">Login</a>
+            <a class="nav-link" routerLink="/login">
+              <i class="fas fa-sign-in-alt"></i> Login</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/signup">Signup</a>
-          </li>
+          <!--li class="nav-item">
+            <a class="nav-link" routerLink="/signup">
+              <i class="fas fa-user-plus"></i> Signup</a>
+          </li-->
+          
         </ng-template>
       </ul>
     </div>
-
+    
       <ul class="navbar-nav">
+        <ng-template #anonymousUser>
+          
+          <!--li class="nav-item">
+            <a class="nav-link" routerLink="/login">
+              <i class="fas fa-sign-in-alt"></i> Login</a>
+          </li>
           <li class="nav-item">
+            <a class="nav-link" routerLink="/signup">
+              <i class="fas fa-user-plus"></i> Signup</a>
+          </li-->
+          <li ngbDropdown class="nav-item dropdown">
+              <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <i class="fas fa-user"></i>
+              </a>
+              <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
+                  <a class="nav-link" routerLink="/login">
+                    <i class="fas fa-sign-in-alt"></i> Login</a>
+                    <a class="nav-link" routerLink="/signup">
+                      <i class="fas fa-user-plus"></i> Signup</a>
+              </div>
+            </li>
+        </ng-template>
+        
+        <!-- <li class="nav-item">
+            <a class="nav-link" routerLink="/shopping-cart">
+
+              <i class="fas fa-tags"></i>
+              <span class="badge badge-warning badge-pill" *ngIf="cart$ | async as cart">
+                  {{ cart.totalItemsCount }}
+                </span>
+               Coupons
+            </a>
+          </li> -->
+        <li class="nav-item">
             <a class="nav-link" routerLink="/shopping-cart">
               <!-- For some reason, the first word should be changed -->
               <!-- from "fas" to "fa" -->
@@ -30,26 +86,25 @@
               </span>
             </a>
           </li>
-        <ng-template #anonymousUser>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/login">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/signup">Signup</a>
-          </li>
-        </ng-template>
         <li ngbDropdown *ngIf="appUser; else anonymousUser" class="nav-item dropdown">
           <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <img class="profile-picture" src="{{appUser.profile_picture}}" onerror="this.src='https://image.flaticon.com/icons/svg/16/16480.svg'">
             {{ appUser.name }}
           </a>
           <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
-            <a class="dropdown-item" routerLink="/my/orders">My Orders</a>
-            <a class="dropdown-item" routerLink="/profile">My Profile</a>
+            <a class="dropdown-item" routerLink="/my/orders">
+              <i class="fas fa-dollar-sign"></i>
+              My Orders</a>
+            <a class="dropdown-item" routerLink="/profile">
+              <i class="fas fa-user-circle"></i> My Profile</a>
             <ng-container *ngIf="appUser.isAdmin">
-              <a class="dropdown-item" routerLink="/admin/orders">Manage Orders</a>
-              <a class="dropdown-item" routerLink="/admin/products">Manage Products</a>
+              <a class="dropdown-item" routerLink="/admin/orders">
+                <i class="fas fa-sitemap"></i> Manage Orders</a>
+              <a class="dropdown-item" routerLink="/admin/products">
+                <i class="fas fa-sitemap"></i> Manage Products</a>
             </ng-container>
-            <a class="dropdown-item" (click)="logout()">Log Out</a>
+            <a class="dropdown-item" (click)="logout()">
+                <i class="fas fa-sign-out-alt"></i> Log Out</a>
           </div>
         </li>
       </ul>
