--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -1,21 +1,34 @@
 .thumbnail
 {
     /* resize image without being out of ratio */
-    width: 200px;
-    height: 200px;
-    border-radius: 50%; 
+    width: 300px;
+    height: 300px;
+    border: 3px solid lightgray;
+    padding: 5px;
     background-size: cover;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
     margin-top: 10px;
 }
 
-.card 
+.name
+{
+    width: 300px;
+    text-align: center;
+    font-size: 48px;
+    margin-top: 20px;
+    display: inline
+}
+
+.email:hover, .address:hover
+{
+    font-weight: bolder;
+}
+
+/* .card 
 {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width: 300px;
     margin: auto;
     text-align: center;
     margin-bottom: 30px;
-}
+} */
