--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -5,18 +5,40 @@
 </head>
 <body>
 
-<h1 style="text-align:center; font-size: 36px;">User Profile</h1>
-<div class="card">
+<h1 style="text-align:center; font-size: 50px;font-weight: 900;">User Profile</h1>
     <!-- The profile picture will the default image if the image url is invalid provided by users -->
-    <img name="profile_picture" class="thumbnail" src="{{appUser.profile_picture}}" onerror="this.src='https://image.flaticon.com/icons/svg/16/16480.svg'" />   
-    <h3>{{appUser.name}}</h3>
-    <br>
-    <i class="fa fa-envelope" style="font-size: 20px;">  {{appUser.email}}</i>
-    <br>
-    <i class="fa fa-home" style="font-size: 20px;">  {{appUser.address}}</i>
-    
-    <p><a class="btn btn-primary" style="margin: 15px; font-size: 20px" routerLink='/profile-update'>Update</a></p>
-</div>
+    <div style="margin-top: 50px;" class="row">
+        <!-- Take 3 out of 12 columns of the page -->
+        <!-- around 25% of the page for catelog -->
+        <div style="text-align: center;" class="col-4">
+            <img name="profile_picture" class="thumbnail" src="{{appUser.profile_picture}}" onerror="this.src='https://image.flaticon.com/icons/svg/16/16480.svg'" />   
+            <div class="name" style="margin-right: 50px;">{{appUser.name}}</div>          
+        </div>
+        
+        <div class="col" style="border: 3px solid lightgray; height: 300px; margin-top: 12px;">
+            <div class="row">
+                <div class="email" style="padding: 20px; margin: auto;">
+                    <a style="color:black; text-decoration: none;" routerLink='/profile-update'>
+                        <i class="fa fa-envelope" style="font-size: 48px;"></i>
+                        <span style="font-size: 32px; margin-left: 20px;">{{appUser.email}}</span>
+                    </a>
+                </div>
+            </div>
 
+            <div class="row">
+                <div class="address" style="padding: 20px; margin: auto;">
+                    <a style="color:black; text-decoration: none;" routerLink='/profile-update'>
+                        <i class="fa fa-home" style="font-size: 56px;"></i>  
+                        <span style="font-size: 32px; margin-left: 20px;">{{appUser.address}} </span>
+                    </a>   
+                </div>
+            </div>
+            <div class="update" style="text-align: center;"
+            >
+                <a class="btn btn-primary" style="margin: 15px; font-size: 20px; font-weight: 700;" routerLink='/profile-update'>Update</a>
+            </div>
+
+        </div>
+    </div>
 </body>
 </html>
