--- a/src/app/shopping/components/shopping-cart-summary/shopping-cart-summary.component.html
+++ b/src/app/shopping/components/shopping-cart-summary/shopping-cart-summary.component.html
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="card-body">
     <h5 class="card-title">Order Summary</h5>
-    <p class="card-text">You have {{ cart.totalItemCount }} items in your Shopping Cart</p>
+    <p class="card-text">You have {{ cart.totalItemsCount }} items in your Shopping Cart</p>
     <ul class="list-group list-group-flash">
       <li *ngFor="let item of cart.items" class="list-group-item">
         {{ item.quantity }} x {{ item.title }}
