--- a/src/app/web-login/web-login.component.html
+++ b/src/app/web-login/web-login.component.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-
-<h1>LOG IN</h1>
 <div *ngIf="hasError" class="alert alert-danger" >{{errorMsg}}</div>
 
 <form #f="ngForm" (ngSubmit)="webLogin(f.value)">
@@ -13,7 +11,8 @@
   <div class="form-group">
     <input ngModel name="password" id="password" type="password" class="form-control" placeholder="Password">
   </div>
-  <button class="btn btn-primary">Login</button>
+  <div class="test-center"><button class="btn btn-primary test-center">Login</button></div>
+  
 </form>
 
 </body>
