About page created

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,7 +11,7 @@
            </li>
          </ul>
        </div>
-       
+        
        <div class="col-md-4">
           <ul class="list-unstyled list-spaced">
             <li class="mb-2"><h6 class="text-uppercase">Legal</h6></li>
@@ -24,11 +24,7 @@
        <div class="col-md-2 offset-md-1 mb-5">
          <ul class="list-unstyled list-spaced">
            <li class="mb-2"><h6 class="text-uppercase">Quick Links</h6></li>
-           <li class="text-muted"><a href="https://www.w3schools.com/html/">About</a></li>
-           <li class="text-muted"><a href="https://www.w3schools.com/html/">Log In</a></li>
-           <li class="text-muted"><a href="https://www.w3schools.com/html/">Cart</a></li>
-           <li class="text-muted"><a href="https://www.w3schools.com/html/">Sign Up</a></li>
-
+           <li class="text-muted"><a routerLink="/about-us">About us</a></li>
          </ul>
        </div>
        <div class="col-md-5 mb-5">
