--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -7,9 +7,14 @@
     <span class="navbar-toggler-icon"></span>
     </button>
 
+
+
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav mr-auto">
-        
+      
+          <li class="nav-item">
+              <span><a class="nav-link" routerLink="/about-us"> About us </a></span>
+            </li>
 
         <ng-template #anonymousUser>
             <li class="nav-item">
@@ -27,7 +32,7 @@
                   <!-- from "fas" to "fa" -->
                   <i class="fa fa-shopping-cart"></i>
                 </a>
-              </li>
+            </li>
 
           <li class="nav-item">
             <a class="nav-link" routerLink="/login">
