team page updated, needs messages and LinkedIn links

--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -18,6 +18,9 @@
             <span><a class="nav-link" routerLink="/about-us"> About us </a></span>
           </li>
           <li class="nav-item">
+              <span><a class="nav-link" routerLink="/team"> Our Team </a></span>
+            </li>
+          <li class="nav-item">
             <span><a class="nav-link" routerLink="/coupon"> Coupon </a></span>
           </li>
 
