--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -25,6 +25,7 @@
          <ul class="list-unstyled list-spaced">
            <li class="mb-2"><h6 class="text-uppercase">Quick Links</h6></li>
            <li class="text-muted"><a routerLink="/about-us">About us</a></li>
+           <li class="text-muted"><a routerLink="/team">Our Team</a></li>
          </ul>
        </div>
        <div class="col-md-5 mb-5">
