Almost done the coupon implementation
Need the coupon code vertification check function done.

--- a/src/app/order-details/order-details.component.html
+++ b/src/app/order-details/order-details.component.html
@@ -45,6 +45,12 @@
             <li class="list-group-item font-weight-bold">
               Total
               <div class="float-right">
+                {{ order.totalAmount | currency: 'USD': true }}
+              </div>
+            </li>
+            <li class="list-group-item font-weight-bold">
+              Purchase Price
+              <div class="float-right">
                 {{ order.purchasePrice | currency: 'USD': true }}
               </div>
             </li>
