--- a/src/app/shopping/components/order-success/order-success.component.html
+++ b/src/app/shopping/components/order-success/order-success.component.html
@@ -76,6 +76,12 @@
                   {{ order.totalAmount | currency: 'USD': true }}
                 </div>
               </li>
+              <li class="list-group-item font-weight-bold">
+                Purchase Price
+                <div class="float-right">
+                  {{ order.purchasePrice | currency: 'USD': true }}
+                </div>
+              </li>
             </ul>
           </div>
         </div> 
