--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -74,11 +74,11 @@
 		<div class="col-md-4 col-sm-4 col-xs-12">
 			<div class="row section-danger ourTeam-box text-center">
 				<div class="col-md-12 section1">
-					<img src="https://media.licdn.com/dms/image/C5103AQG8geZCbykxkA/profile-displayphoto-shrink_800_800/0?e=1529308800&v=beta&t=7lAEaLg9Lo_9wCtcDptqw9xbepe2d-0v6UOtcVIuZi4">
+					<img src="https://sjsu.instructure.com/images/thumbnails/47561065/nFD4DYxCn0HUVyGSRzNRQVTB4IVei6xPVhSThc0r">
 				</div>
 				<div class="col-md-12 section2">
-					<p>Jeffrey Hu</p><br>
-					<h1>Software Design & Software Testing</h1>
+					<p>Yunjun Ma</p><br>
+					<h1>Software Design Lead & Marketing</h1>
 				</div>
 				<div class="col-md-12 section3">
 					<p>
@@ -157,7 +157,7 @@
           </div>
           <div class="col-md-12 section2">
             <p>Tommy Xu</p><br>
-            <h1>Software Design & Technical Lead</h1>
+            <h1>Software Design & Technical</h1>
           </div>
           <div class="col-md-12 section3">
             <p>
@@ -185,7 +185,7 @@
             </div>
             <div class="col-md-12 section2">
               <p>Yanyan Yang</p><br>
-              <h1>Marketing & Software Testing</h1><br>
+              <h1>Marketing Lead & Software Testing</h1><br>
             </div>
             <div class="col-md-12 section3">
               <p>
@@ -216,11 +216,11 @@
         <div class="col-md-4 col-sm-4 col-xs-12">
           <div class="row section-danger ourTeam-box text-center">
             <div class="col-md-12 section1">
-              <img src="https://sjsu.instructure.com/images/thumbnails/47561065/nFD4DYxCn0HUVyGSRzNRQVTB4IVei6xPVhSThc0r">
+                <img src="https://media.licdn.com/dms/image/C5103AQG8geZCbykxkA/profile-displayphoto-shrink_800_800/0?e=1529308800&v=beta&t=7lAEaLg9Lo_9wCtcDptqw9xbepe2d-0v6UOtcVIuZi4">
             </div>
             <div class="col-md-12 section2">
-              <p>Yunjun Ma</p><br>
-              <h1>Software Design & Marketing</h1>
+              <p>Jeffrey Hu</p><br>
+              <h1>Software Design & Software Testing</h1>
             </div>
             <div class="col-md-12 section3">
               <p>
