--- a/src/app/shopping/components/shipping-form/shipping-form.component.html
+++ b/src/app/shopping/components/shipping-form/shipping-form.component.html
@@ -1,3 +1,31 @@
+
+<div class="card">
+  <div class="card-body">
+    <ul class="list-group list-group-flash">
+      <li class="list-group-item font-weight-bold">
+          <input type="text" [(ngModel)]="couponCode" placeholder="Enter Coupon Code">
+          <button type="button"  (click)="applyCoupon()">Apply Coupon</button> 
+      </li>
+      <li class="list-group-item font-weight-bold">
+          Coupon Code you enter: {{couponCode}}
+      </li>
+      <li class="list-group-item font-weight-bold">
+        Total Price:
+        <div class="float-right">
+          {{cart.totalAmount | currency: 'USD': true}}
+        </div>
+      </li>
+      <li class="list-group-item font-weight-bold text-danger">
+        Purchase Price:
+        <div class="float-right">
+          {{cart.totalAmount * (100 - discount)/100 | currency: 'USD': true}}
+        </div>
+      </li>
+    </ul>
+  </div>
+</div>
+
+<h5>Shipping Information</h5>
 <form #f="ngForm">
   <div class="form-group">
     <label for="">Name</label>
