Coupon works partially
There are some issues of the check out price at Credict card API

--- a/src/app/shopping/components/shipping-form/shipping-form.component.html
+++ b/src/app/shopping/components/shipping-form/shipping-form.component.html
@@ -3,7 +3,7 @@
   <div class="card-body">
     <ul class="list-group list-group-flash">
       <li class="list-group-item font-weight-bold">
-          <input type="text" [(ngModel)]="couponCode" placeholder="Enter Coupon Code">
+          <input type="text" [(ngModel)]="inputCouponCode" placeholder="Enter Coupon Code">
           <button type="button"  (click)="applyCoupon()">Apply Coupon</button> 
       </li>
       <li class="list-group-item font-weight-bold">
